force-app/main/default/objects/Mail__c/fields/Insured__c.field-meta.xml
<CustomField>
    <fullName>Insured__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is package insured</description>
    <inlineHelpText>Is package insured</inlineHelpText>
    <label>Insured</label>
    <type>Checkbox</type>
</CustomField>