force-app/main/default/objects/Mail__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Missing__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sorting_Center</fullName>
                <label>Sorting Center</label>
            </value>
            <value>
                <fullName>In_Transit</fullName>
                <label>In Transit</label>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Refund Approved</fullName>
            </value>
            <value>
                <fullName>Refund Rejected</fullName>
            </value>
            <value>
                <fullName>Missing Uninsured</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>