force-app/main/default/objects/Mail__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Estimated current market value of package</description>
    <inlineHelpText>Estimated current market value of package</inlineHelpText>
    <label>Value</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>